tests/failures/todo_while_version/past_version.stderr
error: TODO version requirement '^0.5.0' not satisfied by current v0.3.0
 --> tests/failures/todo_while_version/past_version.rs:5:5
  |
5 |     todo_while_version!("0.5.0");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `todo_while_version` (in Nightly builds, run with -Z macro-backtrace for more info)
