tests/failures/todo_while_version/past_version.rs
use todo_by::todo_while_version;

fn main() {
    // NOTE: The version is stubbed as 0.3.0 in the test harness.
    todo_while_version!("0.5.0");
    fn my_function() {}
}
